# tensor-mesh

./: .gitignore  Cargo.toml  README.md
crates/lctl/: Cargo.toml
crates/tensor-mesh-api/: Cargo.toml
crates/tensor-mesh-core/: Cargo.toml
crates/tensor-mesh-core/src/: dtype.rs  graph.rs  lib.rs  tensor.rs
crates/tensor-mesh-ipc/: Cargo.toml
crates/tensor-mesh-ipc/src/: lib.rs
crates/tensor-mesh-kernels/: Cargo.toml
crates/tensor-mesh-kernels/src/: cpu.rs  cuda.rs  lib.rs  metal.rs
crates/tensor-mesh-model/: Cargo.toml
crates/tensor-mesh-scheduler/: Cargo.toml
docs/: arch.md  perf.md
